--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-4.02MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625tw.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-201.6KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
-  - {name: 🇫🇷 法国-2.41MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-5.10MB/s(Youtube:不良林), server: 152.69.197.60, port: 1069, type: vmess, uuid: ac8e26fe-8150-4b60-ae64-82fc77eba2cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 塞浦路斯-626.0KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇯🇵 日本-713.3KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-918.0KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
+  - {name: 🇯🇵 日本-5.01MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇸🇬 新加坡-484.6KB/s(Youtube:不良林), server: 194.124.35.40, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-445.3KB/s(Youtube:不良林), server: 194.124.35.40, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-713.8KB/s(Youtube:不良林), server: 194.124.35.48, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-466.7KB/s(Youtube:不良林), server: 194.124.35.40, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-324.7KB/s(Youtube:不良林), server: 194.124.35.40, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-626.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-713.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-484.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-713.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-466.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-324.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
