--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇸🇬 新加坡-4.93MB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625tw.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.150, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: 148.66.56.99, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-901.6KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.150, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇸🇬 新加坡-356.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-309.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-343.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-327.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-322.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.150, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-3.16MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-2.73MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-901.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-343.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
