--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇸🇬 新加坡-327.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 134.195.196.150, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇸🇬 新加坡-322.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-2.73MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇸🇬 新加坡-309.9KB/s(Youtube:不良林), server: 194.124.35.40, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-322.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
